--- a/access/CSS/resp.css
+++ b/access/CSS/resp.css
@@ -18,6 +18,7 @@
         top:100%;
         left: 0;
         right: 0;
+        z-index: 1;
     }
     .header .nav>ul {
         flex-direction: column;
