--- a/access/CSS/main.css
+++ b/access/CSS/main.css
@@ -130,3 +130,26 @@ html {
 .last-2 {
     margin-bottom: 0.5rem;
 }
+
+
+.btn {
+    font-size: 32px;
+    color: #fff;
+    background-color:#ef4444;
+    position: absolute;
+    top: 64%;
+    left: 40% ;
+    padding: 20px 40px;
+    border-radius: 10px;
+    animation-name: move;
+    animation-duration: 0.9s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+.bag {
+    display:inline-block
+}
+@keyframes move {
+    from {top: 64%;}
+    to {top: 65%}
+}
